Co-authored-by: fAEDKAN> <fAEDKAN@users.noreply.github.com (RegisterValidator, usersRoutes and userController/userProfile)> Co-authored-by: Axel Bustos <axellbustos@users.noreply.github.com> Co-authored-by: Axel Bustos <axellbustos@users.noreply.github.com (Multer and others)> Co-authored-by: Ushio <ushiovii@users.noreply.github.com (folder create/products/users/banners, productValidator and fixed index searchbar)>

--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -27,13 +27,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="...">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main--img-banner" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="...">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main--img-banner" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="...">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main--img-banner" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -60,21 +60,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main--img-banner" alt="">
                     <div class="carousel-caption d-none d-md-block main--carousel-p-color">
                         <h5>Cliente+</h5>
                         <p>Beneficios increibles con Cliente+.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main--img-banner" alt="">
                     <div class="carousel-caption d-none d-md-block main--carousel-p-color">
                         <h5>Partnership</h5>
                         <p>Convierte en socio de DALF-Store.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main--img-banner" alt="">
                     <div class="carousel-caption d-none d-md-block main--carousel-p-color">
                         <h5>Merchandising</h5>
                         <p>Compra productos unicos de la pagina. <i class="fa-solid fa-heart"></i> </p>
@@ -109,22 +109,22 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-nigger.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banners/banner.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/eric-nice.png" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banners/eric-nice.png" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
