--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -13,11 +13,12 @@
             </div>
             <main class="productdetail__main">
                 <section class="detail__product__images">
-                    <img class="product-img" src="/images/producto-de-usuario.webp" alt="product">
-                    <img src="/images/producto-de-usuario (2).webp" alt="product1">
-                    <img src="/images/producto-de-usuario (3).webp" alt="product2">
-                    <img src="/images/producto-de-usuario (4).webp" alt="product3">
-                    <img src="/images/producto-de-usuario (5).webp" alt="product4">
+                    <img class="product-img" src="/images/products/<%= product.image %>" alt="product">
+                    <!--<img  src="/images/products/producto-de-usuario.webp" alt="">
+                    <img src="/images/products/producto-de-usuario (2).webp" alt="product1">
+                    <img src="/images/products/producto-de-usuario (3).webp" alt="product2">
+                    <img src="/images/products/producto-de-usuario (4).webp" alt="product3">
+                    <img src="/images/products/producto-de-usuario (5).webp" alt="product4">-->
                 </section>
                 <section class="detail__purchase">
                     <article class="detail__purchase__product">
