--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -26,15 +26,15 @@
                 </div>
                 <div class="offcanvas offcanvas-end  offcanvas-end-edited text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                     <div class="offcanvas-header">
-                        <a class="header--figure-logo" href="/index"><img src="/images/logo2.png" alt=""></a>
+                        <a class="header--figure-logo" href="/"><img src="/images/logo2.png" alt=""></a>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3" style="padding-top: 25px;">
-                            <div class="header__navbar-nav-searchbar">
-                                <input type="text" placeholder="Buscar" required>
+                            <form action="/search" class="header__navbar-nav-searchbar">
+                                <input type="text" name="keywords" placeholder="Buscar" required>
                                 <div class="header__navbar-nav-search-button"><i class="fa-solid fa-magnifying-glass icon"></i></div>
-                            </div>
+                            </form>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">TIENDA</a>
                             </li>
