--- a/estructura de archivos/src/views/users/register.ejs
+++ b/estructura de archivos/src/views/users/register.ejs
@@ -5,7 +5,7 @@
     <body id="b0dy__c0nt41n3r">
         <div class="body--form">
             <figure class="body__form__image--container">
-                <a href="/home">
+                <a href="/">
                     <img src="/images/DALF proyecto logo 3 LIMPIO.png" alt="logo">
                 </a>
             </figure>
@@ -18,27 +18,27 @@
                         <div class="body__form__inputs--userData">
                             <div class="body__form__inputs__userData--input">
                                 <label for="fullName">Nombre completo:</label>
-                                <input type="text" placeholder="Nombre completo" id="fullName" name="fullName" required>
+                                <input type="text" placeholder="Nombre completo" id="fullName" name="fullName">
                             </div>
                             <div class="body__form__inputs__userData--input">
-                                <label for="email">Email:</label>
-                                <input type="email" placeholder="E-mail" id="email" name="email" required>
+                                <label for="email">E-mail:</label>
+                                <input type="email" placeholder="E-mail" id="email" name="email">
                             </div>
                             <div class="body__form__inputs__userData--input">
                                 <label for="userName">Nombre de usuario:</label>
-                                <input type="text" placeholder="Nombre de usuario" id="userName" name="userName" required>
+                                <input type="text" placeholder="Nombre de usuario" id="userName" name="userName">
                             </div>
                             <div class="body__form__inputs__userData--input">
                                 <label for="bday">Fecha de nacimiento:</label>
-                                <input type="date" placeholder="Fecha de nacimiento" id="bday" name="bday" required>
+                                <input type="date" placeholder="Fecha de nacimiento" id="bday" name="bday">
                             </div>
                             <div class="body__form__inputs__userData--input">
                                 <label for="pass">Contraseña:</label>
-                                <input type="password" placeholder="Contraseña" id="pass" name="pass" minlength="8" maxlength="25" required>
+                                <input type="password" placeholder="Contraseña" id="pass" name="pass">
                             </div>
                             <div class="body__form__inputs__userData--input">
                                 <label for="repass">Confirmar contraseña:</label>
-                                <input type="password" placeholder="Confirmar contraseña" id="repass" name="repass" required>
+                                <input type="password" placeholder="Confirmar contraseña" id="repass" name="repass">
                             </div>
                         </div>
                         <div class="body__form__button--btn">
