--- a/estructura de archivos/src/views/users/userProfile.ejs
+++ b/estructura de archivos/src/views/users/userProfile.ejs
@@ -5,7 +5,7 @@
     <body id="b0dy__c0nt41n3r">
         <div class="body--form">
             <figure class="body__form__image--container">
-                <a href="/home">
+                <a href="/">
                     <img src="/images/DALF proyecto logo 3 LIMPIO.png" alt="logo">
                 </a>
             </figure>
