--- a/estructura de archivos/src/views/products/productsLoad.ejs
+++ b/estructura de archivos/src/views/products/productsLoad.ejs
@@ -15,7 +15,7 @@
                     <div>
                         <h3 class="products-titulo">Cargar nuevo producto</h3>
                     </div>
-                    <form action="" method="post">
+                    <form action="" method="post" enctype="multipart/form-data">
                         <div class="form-box">
                             <label class="form__label" for="name">Título:</label>
                             <input class="form__input" type="text" id="nombre" autocomplete="off" name="name" placeholder="Título del producto">
