register validator done

--- a/estructura de archivos/src/views/users/login.ejs
+++ b/estructura de archivos/src/views/users/login.ejs
@@ -18,11 +18,11 @@
                         <div class="body__form__inputs--userData">
                             <div class="body__form__inputs__userData--input">
                                 <label for="email">Email:</label>
-                                <input type="email" placeholder="E-mail" id="email" name="email" required>
+                                <input type="email" placeholder="E-mail" id="email" name="email">
                             </div>
                             <div class="body__form__inputs__userData--input">
                                 <label for="pass">Contraseña:</label>
-                            <input type="password" placeholder="Contraseña" id="pass" name="pass" minlength="8" maxlength="25" required>
+                            <input type="password" placeholder="Contraseña" id="pass" name="pass">
                             </div>
                         </div>
                         <div class="body__form__inputs--chckbx">
