--- a/estructura de archivos/src/views/users/userProfile.ejs
+++ b/estructura de archivos/src/views/users/userProfile.ejs
@@ -18,11 +18,11 @@
                         <div class="body__form__inputs--userData">
                             <div class="body__form__inputs__userData--input">
                                 <label for="fullName">Nombre completo:</label>
-                                <input type="text" placeholder="Nombre completo" id="fullName" name="fullName" required>
+                                <input type="text" placeholder="Nombre completo" id="fullName" name="fullName">
                             </div>
                             <div class="body__form__inputs__userData--input">
                                 <label for="userName">Nombre de usuario:</label>
-                                <input type="text" placeholder="Nombre de usuario" id="userName" name="userName" required>
+                                <input type="text" placeholder="Nombre de usuario" id="userName" name="userName">
                             </div>
                             <div class="body__form__inputs__userData__input">
                                 <label for="gender">Género:</label>
