partials logo added - users multer modified

--- a/estructura de archivos/src/views/users/register.ejs
+++ b/estructura de archivos/src/views/users/register.ejs
@@ -4,11 +4,8 @@
 
     <body id="b0dy__c0nt41n3r">
         <div class="body--form">
-            <figure class="body__form__image--container">
-                <a href="/">
-                    <img src="/images/DALF proyecto logo 3 LIMPIO.png" alt="logo">
-                </a>
-            </figure>
+            <%- include('../partials/logoForms',{ title:'Registro de usuario' }) %>
+            
             <div class="body__form--box">
                 <div class="body__form--title">
                     <h2>Registrarse</h2>
