--- a/estructura de archivos/src/views/products/productsLoad.ejs
+++ b/estructura de archivos/src/views/products/productsLoad.ejs
@@ -21,10 +21,23 @@
                             <input class="form__input" type="text" id="nombre" autocomplete="off" name="name" placeholder="Título del producto" value="<%= locals.old && old.name ? old.name : null %>">
                             <small class="form-error"><%= locals.errors && errors.name ? errors.name.msg : null %></small>
                         </div>
+
+                        <div class="form-box">
+                            <label class="form__label" for="price">Precio:</label>
+                            <input class="form__input" type="number" id="" name="price" placeholder="Precio del producto" value="<%= locals.old && old.price ? old.price : null %>">
+                            <small class="form-error"><%= locals.errors && errors.price ? errors.price.msg : null %></small>
+                        </div>
+
+                        <div class="form-box">
+                            <label class="form__label" for="discount">Descuento:</label>
+                            <input type="text" name="discount" id="" placeholder="Ej: 5" value="<%= locals.old && old.discount ? old.discount : null %>">
+                            <small class="form-error"><%= locals.errors && errors.discount ? errors.discount.msg : null %></small>
+                        </div>
+
                         <div class="form-box">
                             <label class="form__label">Categorías:</label>
                             <select name="category" id="" value="<%= locals.old && old.category ? old.category : null %>">
-                                <option value="accion" hidden selected>Seleccionar categoría...</option>
+                                <option value="" hidden selected>Seleccionar categoría...</option>
                                 <option value="accion">Acción</option>
                                 <option value="aventura">Aventura</option>
                                 <option value="ftp/tps">FTP/TPS</option>
@@ -40,23 +53,6 @@
                         </div>
 
                         <div class="form-box">
-                            <label class="form__label" for="price">Precio:</label>
-                            <input class="form__input" type="number" id="" name="price" placeholder="Precio del producto" value="<%= locals.old && old.price ? old.price : null %>">
-                            <small class="form-error"><%= locals.errors && errors.price ? errors.price.msg : null %></small>
-                        </div>
-
-                        <div class="form-box">
-                            <label class="form__label">Descuento:</label>
-                            <input type="text" id="discount" placeholder="Ej: 5" value="<%= locals.old && old.discount ? old.discount : null %>">
-                            <small class="form-error"><%= locals.errors && errors.discount ? errors.discount.msg : null %> </small>
-                        </div>
-
-                        <div class="form-box">
-                            <label class="form__label" for="descripcion">Descripción:</label>
-                            <textarea name="description" id="" cols="30" rows="5" minlength="20" maxlength="250" placeholder="Breve descripción del producto..."></textarea>
-                        </div>
-
-                        <div class="form-box">
                             <label class="form-label">Companía:</label>
                             <select name="company" id="company" value="<%= locals.old && old.company ? old.company : null %>">
                                 <option value="" hidden selected>Seleccionar una compania...</option>
@@ -67,15 +63,20 @@
                                 <option value="ubisoft">Ubisoft</option>
                                 <option value="battle.net">Battle.net</option>
                                 <option value="otro">Otro</option>
-                            <div>
-                                <small class="form-error"><%= locals.errors && errors.company ? errors.company.msg : null %> </small>    
-                            </div>
+                            </select>
+                            <small class="form-error"><%= locals.errors && errors.company ? errors.company.msg : null %></small>    
+                        </div>
+
+                        <div class="form-box">
+                            <label class="form__label" for="descripcion">Descripción:</label>
+                            <textarea name="description" id="" cols="30" rows="5" minlength="20" maxlength="250" placeholder="Breve descripción del producto..."></textarea>
                         </div>
 
                         <div class="form-box load-image">
                             <label class="form__label" for="imagen">Añadir Imágenes:</label>
                             <input type="file" name="imagen" accept=".jpg" multiple>
                         </div>
+
                         <div class="form-box buttons">
                             <button class="total-comprar" type="reset">Cancelar</button>
                             <button class="total-comprar" type="submit">Agregar</button>
