--- a/estructura de archivos/src/views/users/register.ejs
+++ b/estructura de archivos/src/views/users/register.ejs
@@ -10,7 +10,7 @@
                 <div class="body__form--title">
                     <h2>Registrarse</h2>
                 </div>
-                <form action="#">
+                <form action="" method="post">
                     <div class="body__form--inputs">
                         <div class="body__form__inputs--userData">
                             <div class="body__form__inputs__userData--input">
