--- a/estructura de archivos/src/views/products/productEdit.ejs
+++ b/estructura de archivos/src/views/products/productEdit.ejs
@@ -17,6 +17,7 @@
                             <div class="form-box">
                                 <label class="form__label" for="name">Título:</label>
                                 <input class="form__input" type="text" id="name" autocomplete="off" name="name" placeholder="Título del producto" value="<%= productToEdit.name %>">
+                                <small class="form-error"><%= locals.errors && errors.name ? errors.name.msg : null %></small>
                             </div>
 
                             <div class="form-box">
@@ -33,16 +34,19 @@
                                     <option  value="arcade"<%= productToEdit.category === 'arcade' && 'selected' %>>Arcade</option>
                                     <option  value="otro"<%= productToEdit.category === 'otro' && 'selected' %>>Otro</option>
                                 </select>
+                                <small class="form-error"><%= locals.errors && errors.category ? errors.category.msg : null %></small>
                             </div>
 
                             <div class="form-box">
                                 <label class="form__label" for="price">Precio:</label>
                                 <input class="form__input" type="number" id="price" name="price" placeholder="Precio del producto" value="<%= productToEdit.price %>">
+                                <small class="form-error"><%= locals.errors && errors.price ? errors.price.msg : null %></small>
                             </div>
 
                             <div class="form-box">
                                 <label class="form__label">Descuento:</label>
-                                <input type="text" id="discount" placeholder="Ej: 5" value="<%= productToEdit.discount %>">
+                                <input type="text" name="discount"  id="discount" placeholder="Ej: 5" value="<%= productToEdit.discount %>">
+                                <small class="form-error"><%= locals.errors && errors.discount ? errors.discount.msg : null %></small>
                             </div>
 
                             <div class="form-box">
@@ -61,6 +65,7 @@
                                     <option value="battle.net"<%= productToEdit.category === 'battle.net' && 'selected' %>>Battle.net</option>
                                     <option value="otro"<%= productToEdit.category === 'otro' && 'selected' %>>Otro</option>
                                 </select>
+                                <small class="form-error"><%= locals.errors && errors.company ? errors.company.msg : null %></small>
                             </div>
 
                             <div class="form-box load-image">
