--- a/estructura de archivos/src/views/partials/footer.ejs
+++ b/estructura de archivos/src/views/partials/footer.ejs
@@ -42,11 +42,11 @@
     </div>
     <section class="footer__lastsection">
         <nav class="footer__lastsection__navbar">
-            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-discord"></i></a>
+            <a href=""><figure><i class="fa-brands fa-facebook-f"></i></figure></a>
+            <a href=""><figure><i class="fa-brands fa-twitter"></i></figure></a>
+            <a href=""><figure><i class="fa-brands fa-google-plus-g"></i></figure></a>
+            <a href=""><figure><i class="fa-brands fa-instagram"></i></figure></a>
+            <a href=""><figure><i class="fa-brands fa-discord"></i></figure></a>
         </nav>
         <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
     </section>
