--- a/estructura de archivos/src/views/users/login.ejs
+++ b/estructura de archivos/src/views/users/login.ejs
@@ -10,16 +10,18 @@
                 <div class="body__form--title">
                     <h2>Iniciar sesión</h2>
                 </div>
-                <form action="#">
+                <form action="" method="POST">
                     <div class="body__form--inputs">
                         <div class="body__form__inputs--userData">
                             <div class="body__form__inputs__userData--input">
                                 <label for="email">Email:</label>
                                 <input type="email" placeholder="E-mail" id="email" name="email">
+                                <p class="inputs__text__warnings"><%= locals.errors && errors.email ? errors.email.msg : null %></p>
                             </div>
                             <div class="body__form__inputs__userData--input">
                                 <label for="pass">Contraseña:</label>
-                            <input type="password" placeholder="Contraseña" id="pass" name="pass">
+                                <input type="password" placeholder="Contraseña" id="pass" name="pass">
+                                <p class="inputs__text__warnings"><%= locals.errors && errors.pass ? errors.pass.msg : null %></p>
                             </div>
                         </div>
                         <div class="body__form__inputs--chckbx">
