--- a/estructura de archivos/src/views/users/profile.ejs
+++ b/estructura de archivos/src/views/users/profile.ejs
@@ -8,14 +8,14 @@
             
             <div class="body__form--box">
                 <div class="body__form--title">
-                    <h2>Perfil de Usuario</h2>
+                    <h2>Mi Perfil</h2>
                 </div>
-                <form action="#">
+                <form action="/users/update/<%= user.id %>?_method=PUT" enctype="multipart/form-data" method="POST">
                     <div class="body__form--inputs">
                         <div class="body__form__inputs--userData">
                             <div class="body__form__inputs__userData--input">
                                 <label for="userName">Nombre de usuario:</label>
-                                <input type="text" placeholder="Nombre de usuario" id="userName" name="userName">
+                                <input type="text" placeholder="Nombre de usuario" id="userName" name="userName" value="<%= user.userName %>">
                             </div>
                             <div class="body__form__inputs__userData__input--avatar">
                                 <button class="body__form__inputs__userData__input__avatar--btn">Elegir Avatar</button>
