--- a/estructura de archivos/src/views/products/productEdit.ejs
+++ b/estructura de archivos/src/views/products/productEdit.ejs
@@ -71,6 +71,7 @@
                             <div class="form-box load-image">
                                 <label class="form__label" for="imagen">Añadir Imágenes:</label>
                                 <input type="file" name="imagen" accept=".jpg" multiple>
+                                <small class="form-error"><%= locals.errors && errors.images ? errors.images.msg : null %></small>
                             </div>
 
                             <div class="form-box buttons">
