--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -139,59 +139,7 @@
     </main>
     <!-- / M A I N -->
     <!-- F O O T E R -->
-    <footer class="footer__content">
-        <div class="footer--logo">
-            <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
-        </div>
-        <div class="footer_nav">
-            <nav class="footer_nav-home">
-                <p>Titulos</p>
-                <ul type="none">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Mi cuenta</a></li>
-                    <li><a href="">Contactanos</a></li>
-                    <li><a href="">Ayuda</a></li>
-                </ul>
-            </nav>
-            <nav class="footer_nav-aboutUs">
-                <p>
-                    Titulos
-                </p>
-                <ul type="none">
-                    <li><a href=""> Sobre nosotros</a></li>
-                    <li><a href="">Politica de privacidad</a></li>
-                    <li><a href="">Politica de cookies</a></li>
-                    <li><a href="">Aviso legal</a></li>
-                </ul>
-            </nav>
-            <nav class="footer_nav-aboutUs">
-                <p>
-                    Titulos
-                </p>
-                <ul type="none">
-                    <li><a href="">Titulos</a></li>
-                    <li><a href="">Titulos</a></li>
-                    <li><a href="">Titulos</a></li>
-                    <li><a href="">Titulos</a></li>
-                </ul>
-            </nav>
-            <div class="footer_nav-app">
-                <p>Descarga nuestra app</p>
-                <a href=""><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.a7hkwxpVOiMzChf87GmGdwHaCM%26pid%3DApi&f=1" alt=""></a>
-                <a href=""><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.dnPVcNejErfwIJacdXV27wHaCj%26pid%3DApi&f=1" alt=""></a>
-            </div>
-        </div>
-        <section class="footer__lastsection">
-            <nav class="footer__lastsection__navbar">
-                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-                <a href=""><i class="fa-brands fa-twitter"></i></a>
-                <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-discord"></i></a>
-            </nav>
-            <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
-        </section>
-    </footer>
+    <%- include('./partials/footer',{ title:'home', }) %>
     <!-- / F O O T E R -->
     <!-- SCRIPTS -->
     <script src="https://kit.fontawesome.com/ae7c764a16.js " crossorigin="anonymous "></script>
