--- a/estructura de archivos/src/views/products/cartAdress.ejs
+++ b/estructura de archivos/src/views/products/cartAdress.ejs
@@ -89,53 +89,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="carrito__main__section--pruductos-recomendados">
-                    <p class="carrito__main__section--pruductos-title">Productos que pueden interesarte</p>
-                    <div class="linea">
-                        <hr>
-                    </div>
-                    <article class="productos-recomendados">
-                        <div class="glider-contain">
-                            <div class="glider">
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                            </div>
-
-                            <button aria-label="Previous" class="glider-prev">«</button>
-                            <button aria-label="Next" class="glider-next">»</button>
-                            <div role="tablist" class="dots"></div>
-                        </div>
-
-                    </article>
-                </section>
+                <%- include('../partials/productsRecommended') %>
             </main>
         <!-- / M A I N -->
         <!-- F O O T E R -->
