--- a/estructura de archivos/src/views/products/cartPay.ejs
+++ b/estructura de archivos/src/views/products/cartPay.ejs
@@ -54,53 +54,7 @@
                     </div>
 
                 </section>
-                <section class="carrito__main__section--pruductos-recomendados">
-                    <p class="carrito__main__section--pruductos-title">Productos que pueden interesarte</p>
-                    <div class="linea">
-                        <hr>
-                    </div>
-                    <article class="productos-recomendados">
-                        <div class="glider-contain">
-                            <div class="glider">
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                                <div>
-                                    <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
-                                </div>
-                            </div>
-
-                            <button aria-label="Previous" class="glider-prev">«</button>
-                            <button aria-label="Next" class="glider-next">»</button>
-                            <div role="tablist" class="dots"></div>
-                        </div>
-
-                    </article>
-                </section>
+                <%- include('../partials/productsRecommended') %>
             </main>
             <%- include('../partials/footer',{ title:'home', }) %>
                 <script src="/javascripts/glider.js"></script>
